argocd/hello-world/hello-world-war-1.0.0-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-war
  namespace: default
  labels:
    app: hello-world-war
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-world-war
  template:
    metadata:
      labels:
        app: hello-world-war
    spec:
      containers:
      - name: hello-world-war
        image: 13.50.194.17:5000/hello-world-war:46
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: hello-world-war
  namespace: default
spec:
  selector:
    app: hello-world-war
  ports:
  - name: http
    targetPort: 8080
    port: 80
