argocd/hello-world/hello-world-war-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-war-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: hello-world-war
              port:
                number: 80
          path: '/hello-world-war-1.0.0'
          pathType: Prefix
